--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@hookform/resolvers": "^3.3.1",
-    "@react-native-async-storage/async-storage": "^1.19.3",
-    "@react-native-community/datetimepicker": "^7.6.0",
-    "@react-native-picker/picker": "^2.5.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.3",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
-    "expo": "~49.0.13",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^48.0.0",
+    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-native": "0.72.5",
-    "react-native-gesture-handler": "^2.13.1",
+    "react-native": "0.71.13",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "styled-components": "^6.0.8",
     "yup": "^1.3.2"
   },
