--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "expo": "^48.0.0",
+    "expo-image-picker": "^14.5.0",
+    "expo-location": "^16.3.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.71.13",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-maps": "^1.8.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
